# my_project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  members.db  pyproject.toml  requirements.txt  requiriments.txt  settings.json  test.db  vercel.json
src/: database.py  main.py  test_connection.py  test_imports.py
src/models/: member.py
src/my_project/: database.py  main.py  models.py
src/my_project/database/: __init__.py  database.py  member_db.py
src/my_project/models/: __init__.py  member.py  models.py
src/my_project/routers/: members.py
src/my_project/schemas/: __init__.py  member.py
src/my_project/services/: members_service.py
src/routers/: member_router.py
src/schemas/: member.py
src/services/: member_services.py
tests/: conftest.py  test_database.py  test_main.py  test_member_conversion.py  test_member_router.py  test_members.py
