[project]
name = "my_project"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "Giancarlo", email = "gian.verdum@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.2",
    "sqlalchemy>=2.0.36",
    "httpx>=0.27.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
ignore_missing_imports = true
strict = true
check_untyped_defs = true
show_error_codes = true
warn_unused_configs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
